--- a/index.html
+++ b/index.html
@@ -3,17 +3,17 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>PeinturePro - Peinture Professionnelle en France</title>
-    <meta name="description" content="Expert en peinture intérieure et extérieure en France. Qualité professionnelle, devis gratuit, 15 ans d'expérience. Transformez vos espaces avec PeinturePro." />
+    <title>NH Rénovation - Peinture Professionnelle en France</title>
+    <meta name="description" content="Expert en peinture intérieure et extérieure en France. Qualité professionnelle, devis gratuit, 15 ans d'expérience. Transformez vos espaces avec NH Rénovation." />
     <meta name="keywords" content="peinture, peintre, rénovation, intérieur, extérieur, France, professionnel, devis gratuit" />
-    <meta name="author" content="PeinturePro" />
+    <meta name="author" content="NH Rénovation" />
     
     <!-- Google Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;600;700&family=Inter:wght@300;400;500;600&display=swap" rel="stylesheet">
 
-    <meta property="og:title" content="PeinturePro - Peinture Professionnelle en France" />
+    <meta property="og:title" content="NH Rénovation - Peinture Professionnelle en France" />
     <meta property="og:description" content="Expert en peinture intérieure et extérieure en France. Qualité professionnelle, devis gratuit, 15 ans d'expérience." />
     <meta property="og:type" content="website" />
     <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
