--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>HN Rénovation - Peinture Professionnelle en France</title>
     <meta
       name="description"
-      content="Expert en peinture intérieure et extérieure en France. Qualité professionnelle, devis gratuit, 15 ans d'expérience. Transformez vos espaces avec HN Rénovation."
+      content="Expert en peinture intérieure et extérieure en France. Qualité professionnelle, devis gratuit,  d'expérience. Transformez vos espaces avec HN Rénovation."
     />
     <meta
       name="keywords"
@@ -24,8 +24,8 @@
     </noscript>
 
     <!-- OpenGraph / Twitter Cards – 100 % à toi maintenant ! -->
-    <meta property="og:title" content="HN Rénovation - Peintre Professionnel Paris & France" />
-    <meta property="og:description" content="Peinture intérieure et extérieure • Devis gratuit • 15 ans d'expérience • Paris et toute la France" />
+    <meta property="og:title" content="HN Rénovation - Peintre Professionnel Cambrai & France" />
+    <meta property="og:description" content="Peinture intérieure et extérieure • Devis gratuit • Cambrai et toute la France" />
     <meta property="og:image" content="https://hn-renovation.fr/uploads/1759262842539-hero-painting.jpg" />
     <meta property="og:url" content="https://hn-renovation.fr" />
     <meta property="og:type" content="website" />
@@ -34,6 +34,8 @@
     <meta name="twitter:title" content="HN Rénovation - Peintre Professionnel" />
     <meta name="twitter:description" content="Peinture & rénovation • Devis gratuit en 24h" />
     <meta name="twitter:image" content="https://hn-renovation.fr/uploads/1759262842539-hero-painting.jpg" />
+    <link rel="icon" type="image/png" href="https://hn-renovation.fr/uploads/1759260663108-nh-logo.png" />
+
   </head>
   <body>
     <div id="root"></div>
