--- a/index.html
+++ b/index.html
@@ -3,16 +3,6 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>HN Rénovation - Peinture Professionnelle en France</title>
-    <meta
-      name="description"
-      content="Expert en peinture intérieure et extérieure en France. Qualité professionnelle, devis gratuit,  d'expérience. Transformez vos espaces avec HN Rénovation."
-    />
-    <meta
-      name="keywords"
-      content="peinture, peintre, rénovation, intérieur, extérieur, France, professionnel, devis gratuit"
-    />
-    <meta name="author" content="HN Rénovation" />
 
     <!-- Google Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -22,23 +12,12 @@
     <noscript>
       <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;600;700&family=Inter:wght@300;400;500;600&display=swap" rel="stylesheet">
     </noscript>
-
-    <!-- OpenGraph / Twitter Cards – 100 % à toi maintenant ! -->
-    <meta property="og:title" content="HN Rénovation - Peintre Professionnel Cambrai & France" />
-    <meta property="og:description" content="Peinture intérieure et extérieure • Devis gratuit • Cambrai et toute la France" />
-    <meta property="og:image" content="https://hn-renovation.fr/uploads/1759262842539-hero-painting.jpg" />
-    <meta property="og:url" content="https://hn-renovation.fr" />
-    <meta property="og:type" content="website" />
-
-    <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:title" content="HN Rénovation - Peintre Professionnel" />
-    <meta name="twitter:description" content="Peinture & rénovation • Devis gratuit en 24h" />
-    <meta name="twitter:image" content="https://hn-renovation.fr/uploads/1759262842539-hero-painting.jpg" />
     <link rel="icon" type="image/png" href="https://hn-renovation.fr/uploads/1759260663108-nh-logo.png" />
 
+    <!--app-helmet-->
   </head>
   <body>
-    <div id="root"></div>
+    <div id="root"><!--app-html--></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
