--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>HN Rénovation - Peinture Professionnelle en France</title>
+    <title>HN Rénovation - Entreprise de peinture et rénovation à Cambrai </title>
     <meta
       name="description"
-      content="Expert en peinture intérieure et extérieure en France. Qualité professionnelle, devis gratuit,  d'expérience. Transformez vos espaces avec HN Rénovation."
+      content="Artisan en peinture et rénovation intérieure et extérieure à Cambrai. Qualité professionnelle, devis gratuit Transformez vos espaces avec HN Rénovation."
     />
     <meta
       name="keywords"
