add google analytics tag

--- a/index.html
+++ b/index.html
@@ -36,6 +36,17 @@
     <meta name="twitter:image" content="https://hn-renovation.fr/uploads/1759262842539-hero-painting.jpg" />
     <link rel="icon" type="image/png" href="https://hn-renovation.fr/uploads/1759260663108-nh-logo.png" />
 
+
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-YTTP4T98J0"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'G-YTTP4T98J0');
+    </script>
+
   </head>
   <body>
     <div id="root"></div>
