--- a/index.html
+++ b/index.html
@@ -3,13 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>H.N. Rénovation | Peintre professionnel à Cambrai (59) et alentours</title>
-    <meta
-      name="description"
-      content="H.N. Rénovation : entreprise de peinture à Cambrai et alentours : peinture intérieure, extérieure, rénovation, plâtrerie, enduit, façades. Artisan qualifié, devis gratuit."
-    />
+    <title>HN Rénovation | Artisan peintre à Cambrai (59)</title>
     <meta name="author" content="HN Rénovation" />
-    <link rel="canonical" href="https://hn-renovation.fr/" />
 
     <!-- Google Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -20,17 +15,6 @@
       <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;600;700&family=Inter:wght@300;400;500;600&display=swap" rel="stylesheet">
     </noscript>
 
-    <!-- OpenGraph / Twitter Cards -->
-    <meta property="og:title" content="H.N. Rénovation | Peintre professionnel à Cambrai (59)" />
-    <meta property="og:description" content="Peinture intérieure et extérieure • Devis gratuit • Cambrai et alentours" />
-    <meta property="og:image" content="https://hn-renovation.fr/uploads/1759262842539-hero-painting.jpg" />
-    <meta property="og:url" content="https://hn-renovation.fr" />
-    <meta property="og:type" content="website" />
-
-    <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:title" content="H.N. Rénovation | Peintre professionnel à Cambrai (59)" />
-    <meta name="twitter:description" content="Peinture & rénovation • Devis gratuit en 24h" />
-    <meta name="twitter:image" content="https://hn-renovation.fr/uploads/1759262842539-hero-painting.jpg" />
     <link rel="icon" href="/favicon.ico" sizes="any" />
     <link rel="apple-touch-icon" href="/hn-logo.png" />
 
