update mobile version for better performance

--- a/index.html
+++ b/index.html
@@ -19,14 +19,31 @@
     <link rel="apple-touch-icon" href="/hn-logo.png" />
 
 
-    <!-- Google tag (gtag.js) -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=G-YTTP4T98J0"></script>
+    <!-- Google tag (gtag.js) - defer loading for better LCP -->
     <script>
       window.dataLayer = window.dataLayer || [];
       function gtag(){dataLayer.push(arguments);}
       gtag('js', new Date());
-
       gtag('config', 'G-YTTP4T98J0');
+
+      (function () {
+        var loadGtag = function () {
+          var script = document.createElement('script');
+          script.async = true;
+          script.src = 'https://www.googletagmanager.com/gtag/js?id=G-YTTP4T98J0';
+          document.head.appendChild(script);
+        };
+
+        var onLoad = function () {
+          if ('requestIdleCallback' in window) {
+            requestIdleCallback(loadGtag, { timeout: 3000 });
+          } else {
+            setTimeout(loadGtag, 1500);
+          }
+        };
+
+        window.addEventListener('load', onLoad);
+      })();
     </script>
 
   </head>
