add social links

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>HN Rénovation | Artisan peintre à Cambrai (59)</title>
+    <title>HN Rénovation | Peintre à Cambrai (59) - Peinture intérieure</title>
     <meta name="author" content="HN Rénovation" />
 
     <!-- Google Fonts -->
