add twitter link

--- a/index.html
+++ b/index.html
@@ -30,7 +30,40 @@
 
   </head>
   <body>
-    <div id="root"></div>
+    <div id="root">
+      <noscript>
+        <section>
+          <h1>HN Rénovation - Artisan peintre à Cambrai (59)</h1>
+          <p>
+            Entreprise de peinture à Cambrai (Nord). Peinture intérieure et extérieure, enduits, plâtrerie, façades.
+            Intervention rapide, finitions soignées et devis gratuit.
+          </p>
+          <h2>Services de peinture</h2>
+          <ul>
+            <li>Peinture intérieure : murs, plafonds, boiseries, finitions.</li>
+            <li>Peinture extérieure : façades, pignons, protections durables.</li>
+            <li>Enduit professionnel : ratissage, bandes, supports lisses.</li>
+            <li>Plâtrerie et finitions : reprises, rénovations, préparation avant peinture.</li>
+          </ul>
+          <h2>Zones d'intervention</h2>
+          <p>Cambrai, Douai, Valenciennes, Arras, Caudry et alentours.</p>
+          <h2>Pages principales</h2>
+          <ul>
+            <li><a href="/realisations">Réalisations</a></li>
+            <li><a href="/avis">Avis clients</a></li>
+            <li><a href="/artisan-peintre/cambrai-59400">Artisan peintre à Cambrai</a></li>
+            <li><a href="/peinture-interieure/cambrai-59400">Peinture intérieure à Cambrai</a></li>
+            <li><a href="/peinture-exterieure/cambrai-59400">Peinture extérieure à Cambrai</a></li>
+            <li><a href="/enduit/cambrai-59400">Enduit professionnel à Cambrai</a></li>
+            <li><a href="/platrerie/cambrai-59400">Plâtrerie et finitions à Cambrai</a></li>
+          </ul>
+          <h2>Contact</h2>
+          <p>103 rue Saint Ladre, 59400 Cambrai</p>
+          <p>Téléphone : +33 06 02 22 80 01</p>
+          <p>Email : hn.renovation.fr@gmail.com</p>
+        </section>
+      </noscript>
+    </div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
